--- a/vignettes/sample_timing_yaml.Rmd
+++ b/vignettes/sample_timing_yaml.Rmd
@@ -16,8 +16,10 @@ knitr::opts_chunk$set(
 
 In this vignette, we will demonstrate the following tools:
 
-* using {mipdtrial} to simulate a trial, with the trial design specified using
+- Using {mipdtrial} to simulate a trial, with the trial design specified using
   yaml files.
+- We will have two trial "arms", varying only by the therapeutic drug monitoring
+  strategy used. The two arms will be defined by two yaml files.
 
 ## Motivation
 
@@ -134,7 +136,7 @@ cov_mapping <- c(
 )
 ```
 
-## 4. Simulate a trial!
+## 3. Simulate a trial!
 
 Patients will get a model-based dose (using population PK parameters), and then
 this dose will be adjusted based on the MAP Bayesian fit made using the 
@@ -161,15 +163,15 @@ res2 <- run_trial(
 )
 ```
 
-## 5. Analyze results
+## 4. Analyze results
 
 We are interested in AUC target attainment. How did target attainment compare
 between the two arms of the trial?
 
 ```{r}
 results <- bind_rows(
-  res1$final_exposure %>% mutate(sampling_design = "peak_trough"),
-  res2$final_exposure %>% mutate(sampling_design = "random"),
+  res1$final_exposure %>% mutate(sampling_design = "peak-trough"),
+  res2$final_exposure %>% mutate(sampling_design = "mid-interval"),
 )
 target_attainment <- results %>%
   mutate(ontarget = ifelse(auc_true >= 400 & auc_true <= 600, 1, 0)) %>%
