--- a/vignettes/vancomycin_interval_adaptation.Rmd
+++ b/vignettes/vancomycin_interval_adaptation.Rmd
@@ -55,13 +55,64 @@ dose_update_design <- create_regimen_update_design(
   at = c(3, 5),
   anchor = "dose",
   update_type = "dose",
-  dose_optimization_method = map_adjust_dose
+  dose_optimization_method = map_adjust_dose # fixed interval, optimize dose
 )
 interval_update_design <- create_regimen_update_design(
   at = c(3, 5),
   anchor = "dose",
   update_type = "interval",
-  dose_optimization_method = map_adjust_interval
+  dose_optimization_method = map_adjust_interval, # allow interval to vary
+  grid = c(6, 8, 12, 18, 24, 36, 48) # allowable intervals
+)
+```
+
+We will be using the Thomson (2009) model for simulation and estimation:
+
+```{r}
+model_design <- create_model_design(lib = "pkvancothomson")
+
+```
+
+For both trial arms, we will start with a dose estimated to attain the target
+exposure metrics based on population PK parameters, assuming a 12-hour interval.
+For one arm of the trial, this interval will stay fixed at 12 hours, while for
+the other arm, we will allow the interval to vary.
+
+
+```{r}
+initial_method <- create_initial_regimen_design(
+  method = model_based_starting_dose,
+  regimen = list(
+    interval = 12,
+    type = "infusion",
+    t_inf = 1
+  ),
+  settings = list(
+    auc_comp = 3,
+    dose_resolution = 250,
+    dose_grid = c(250, 5000, 250)
+  )
+)
+      
+```
+
+Now we can combine these design choices into two trial arm designs:
+
+```{r}
+design1 <- create_trial_design(
+  sampling_design = tdm_design, 
+  target_design = target_design,
+  regimen_update_design = dose_update_design, # arm 1
+  initial_regimen_design = initial_method,
+  sim_design = model_design, est_design = model_design
+)
+
+design2 <- create_trial_design(
+  sampling_design = tdm_design,
+  target_design = target_design,
+  regimen_update_design = interval_update_design, # arm 2
+  initial_regimen_design = initial_method,
+  sim_design = model_design, est_design = model_design
 )
 ```
 
@@ -78,44 +129,32 @@ dat <- data.frame(
   weight = rnorm(30, 90, 25),               # kg, normally distributed
   crcl = exp(rnorm(30, log(6), log(1.6)))   # L/hr, log-normally distributed 
 )
-dat$CL_HEMO <- 0
-```
-
-## 3. Load model definitions
-
-We need to define the model parameters and variability terms for our simulation.
-For this study, we will use the ones defined in the models.
-
-```{r echo=FALSE}
-# for CI, most windows users should not need this since the .libPaths should
-# include where the model was installed.
-if (.Platform$OS.type == "windows") { 
-    .libPaths(c("D:/a/mipdtrial/mipdtrial/check/mipdtrial.Rcheck", .libPaths()))
-}
-
-if (!require(pkvancothomson)) {
-  PKPDsim::install_default_literature_model("pk_vanco_thomson")
-  library(pkvancothomson)
-}
-model <- pkvancothomson::model()
-pop_parameters <- pkvancothomson::parameters()
-omega <- pkvancothomson::omega_matrix()
-ruv <- pkvancothomson::ruv()
+dat$CL_HEMO <- 0 # required covariate for our model
 ```
 
 We also need to link the covariates in our data set to the covariates expected
-in the model.
+in the model:
+
+  - To check which covariates are required for your model use
+    `PKPDsim::get_model_covariates()`:
+
+    ```{r}
+    PKPDsim::get_model_covariates(model_design$model)
+    ```
+  
+  - To check which covariates are in your data set use `colnames()`:
+
+    ```{r}
+    colnames(dat)
+    ```
 
 ```{r}
-# check which covariates are required for your model using 
-# `PKPDsim::get_model_covariates(model)`
-
-# check which covariates are in your data set using `colnames(dat)`
-cov_mapping <- c(
+cov_map <- c(
   WT = "weight", 
   CRCL = "crcl",
   CL_HEMO = "CL_HEMO"
 )
+
 ```
 
 ## 4. Simulate a trial!
@@ -128,83 +167,11 @@ Individual PK parameters will be randomly generated based on the interindividual
 variability described in the model, and residual variability will be added to
 each sample collected using the error model described in the model.
 
-First let's simulate the "dose optimization" scenario, leaving the interval
-fixed.
-
 ```{r}
-set.seed(15) # important for reproducibility
-tdms <- c()
-dose_updates <- c()
-for (i in dat$ID) {
-  
-  #################################################################################
-  ## Create individual
-  #################################################################################
-  # get patient covariates
-  covs <- create_cov_object(
-    dat[dat$ID == i,],
-    mapping = cov_mapping
-  )
-  # randomly draw individual PK parameters
-  pars_true_i <- generate_iiv(
-    sim_model = model,
-    omega = omega,
-    parameters = pop_parameters
-  )
-
-  #################################################################################
-  ## Find initial starting dose
-  #################################################################################
-  # find initial starting dose: define basic regimen, then upda
-  initial_reg <- model_based_starting_dose(
-    sampling_design = tdm_design,
-    target_design = target_design,
-    n = 12,
-    interval = 12,
-    t_inf = 2,
-    dose_resolution = 250, # round to nearest 250 mg
-    grid = seq(250, 6000, by = 250),
-    grid_type = "dose",
-    est_model = model,
-    parameters = pop_parameters,
-    covariates = covs,
-    auc_comp = attr(model, "size")
-  )
-
-  #################################################################################
-  ## Main patient-level loop: run through regimen optimization
-  #################################################################################
-  treatment_summary <- sample_and_adjust_by_dose(
-    regimen_update_design = dose_update_design, 
-    sampling_design = tdm_design,
-    target_design = target_design,
-    regimen = initial_reg,
-    covariates = covs,
-    pars_true_i = pars_true_i,
-    sim_model = model,
-    sim_ruv = ruv,
-    est_model = model,
-    parameters = pop_parameters,
-    omega = omega,
-    ruv = ruv
-  )
-  
-  #################################################################################
-  ## Collect data into object
-  #################################################################################
-  tdms <- bind_rows(
-    tdms,
-    treatment_summary$tdms %>% mutate(id = i)
-  )
-  dose_updates <- bind_rows(
-    dose_updates,
-    treatment_summary$dose_updates %>% mutate(id = i)
-  )
-  
-}
+res1 <- run_trial(data = dat, design = design1, cov_mapping = cov_map, seed = 15)
+res2 <- run_trial(data = dat, design = design2, cov_mapping = cov_map, seed = 15)
 ```
-
-## 5. Analyze results for dose-adaptation
+## 5. Analyze results 
 
 Let's see how well that worked. In the figure below we plot the steady state
 AUC that is attained using the regimen updated at the time shown on the x-axis.
@@ -213,105 +180,33 @@ range more closely, as more TDM is available to optimize the dose. Since
 we're keeping the interval fixed, each patient will have the same dose update
 times on the x-axis.
 
-```{r}
-ggplot(dose_updates) +
-  geom_line(aes(x = t, y = auc_before_update, group = id)) +
-  geom_point(aes(x = t, y = auc_before_update, group = id)) +
-  geom_ribbon(data = data.frame(t = c(0, max(dose_updates$t)), ymin = c(400, 400), ymax = c(600, 600)), aes(x = t, ymin = ymin, ymax = ymax), fill = "blue", alpha = 0.2) +
-  xlab("Time of regimen update") + ylab("Resulting AUC at t=6 days")
+```{r fig.width = 5}
+ggplot(res1$dose_updates) +
+  aes(x = t, y = auc_before_update, group = id) +
+  geom_rect(
+    xmin = -Inf, xmax = Inf, ymin = 400, ymax = 600,
+    fill = "#3870FA", alpha = 0.2
+  ) +
+  geom_line() +
+  geom_point() +
+  xlab("Time of regimen update (Dose update algorithm)") + 
+  ylab("Resulting AUC at t=6 days (mg*h/L)")
 ```
 
-## 6. Interval adaptation
+We can do the same for the intervan update algorithm:
 
-Next, we'll simulate a trial in which the *interval* is optimized, and the
-dose is fixed (after an initial model-based dose is obtained). Again, we'll
-allow the dose to be changed after doses 3 and 5 (irrespective of interval).
-
-```{r}
-interval_update_design <- create_regimen_update_design(
-  at = c(3, 5),
-  anchor = "dose",
-  update_type = "interval"
-)
+```{r fig.width = 5}
+ggplot(res2$dose_updates) +
+  aes(x = t, y = auc_before_update, group = id) +
+  geom_rect(
+    xmin = -Inf, xmax = Inf, ymin = 400, ymax = 600,
+    fill = "#3870FA", alpha = 0.2
+  ) +
+  geom_line() +
+  geom_point() +
+  xlab("Time of regimen update (Interval update algorithm)") + 
+  ylab("Resulting AUC at t=6 days (mg*h/L)")
 ```
-
-```{r}
-set.seed(15) # important for reproducibility
-tdms <- c()
-dose_updates <- c()
-for (i in dat$ID) {
-  
-  #################################################################################
-  ## Create individual
-  #################################################################################
-  # get patient covariates
-  covs <- create_cov_object(
-    dat[dat$ID == i,],
-    mapping = cov_mapping
-  )
-  # randomly draw individual PK parameters
-  pars_true_i <- generate_iiv(
-    sim_model = model,
-    omega = omega,
-    parameters = pop_parameters
-  )
-
-  #################################################################################
-  ## Find initial starting dose
-  #################################################################################
-  # find initial starting dose: define basic regimen, then upda
-  initial_reg <- model_based_starting_dose(
-    sampling_design = tdm_design,
-    target_design = target_design,
-    n = 30,
-    interval = 12,
-    t_inf = 2,
-    dose_resolution = 250, # round to nearest 250 mg
-    grid = seq(250, 6000, by = 250),
-    grid_type = "dose",
-    # define model components
-    est_model = model,
-    parameters = pop_parameters,
-    covariates = covs,
-    auc_comp = attr(model, "size")
-  )
-
-  #################################################################################
-  ## Main patient-level loop: run through regimen optimization
-  #################################################################################
-  treatment_summary <- sample_and_adjust_by_dose(
-    regimen_update_design = interval_update_design, # <-- use interval update design now!
-    grid = c(6, 8, 12, 16, 24, 36), # <-- passed on to the optimization function as possible interval options
-    sampling_design = tdm_design,
-    target_design = target_design,
-    regimen = initial_reg,
-    covariates = covs,
-    pars_true_i = pars_true_i,
-    sim_model = model,
-    sim_ruv = ruv,
-    est_model = model,
-    parameters = pop_parameters,
-    omega = omega,
-    ruv = ruv,
-    verbose = F
-  )
-  
-  #################################################################################
-  ## Collect data into object
-  #################################################################################
-  # extract metrics of interest
-  tdms <- bind_rows(
-    tdms,
-    treatment_summary$tdms %>% mutate(id = i)
-  )
-  dose_updates <- bind_rows(
-    dose_updates,
-    treatment_summary$dose_updates %>% mutate(id = i)
-  )
-}
-```
-
-## 7. Analyze results for interval-adaptation
 
 When we plot the results of this simulation, we now see that dose update times
 are flexible, and not the same for each patient. We again see that the resulting
@@ -319,19 +214,14 @@ steady state AUC24 also approaches the middle of the targeted AUC range. So this
 shows that the dosing interval can also be used very easily to obtain optimal 
 drug exposure.
 
-```{r}
-ggplot(dose_updates) +
-  geom_line(aes(x = t, y = auc_before_update, group = id)) +
-  geom_point(aes(x = t, y = auc_before_update, group = id)) +
-  geom_ribbon(data = data.frame(t = c(0, max(dose_updates$t)), ymin = c(400, 400), ymax = c(600, 600)), aes(x = t, ymin = ymin, ymax = ymax), fill = "blue", alpha = 0.2) +
-  xlab("Time of regimen update") + ylab("Resulting AUC at t=6 days")
-```
+We can also look to see which intervals were chosen per patient. Some patients
+stayed on an interval of 12 hours throughout the treatment course, while for 
+other patients, interval changed 1 or more times.
 
-```{r}
-dose_updates %>%
-  mutate(idx = rep(c(1:3), 30)) %>%
+```{r fig.width = 7, fig.height = 6}
+res2$dose_updates %>%
   ggplot() +
     geom_bar(aes(x = as.factor(interval_before_update))) +
-    facet_wrap(~idx) +
+    facet_wrap(~id) +
     xlab("Interval")
 ```
