--- a/vignettes/vancomycin_interval_adaptation.Rmd
+++ b/vignettes/vancomycin_interval_adaptation.Rmd
@@ -14,6 +14,27 @@ knitr::opts_chunk$set(
 )
 ```
 
+```{r echo=FALSE, results='hide'}
+# for CI, most windows users should not need this since the .libPaths should
+# include where the model was installed.
+if (.Platform$OS.type == "windows") { 
+    .libPaths(c("D:/a/mipdtrial/mipdtrial/check/mipdtrial.Rcheck", .libPaths()))
+}
+
+if (!require(pkvancothomson)) {
+  PKPDsim::install_default_literature_model("pk_vanco_thomson")
+}
+```
+
+In this vignette, we will demonstrate the following tools:
+
+- using {mipdtrial} to simulate a trial, with the trial design specified using
+  R code.
+- comparing two different algorithms for determining the next dose by different
+  calls to `create_regimen_update_design()`
+
+## Motivation
+
 In model-informed precision dosing we can update doses, but of course we can also reduce or increase the dosing interval length. This can also be studied using 
 the `mipdtrial` package.
 
