--- a/vignettes/vancomycin_interval_adaptation.Rmd
+++ b/vignettes/vancomycin_interval_adaptation.Rmd
@@ -21,8 +21,9 @@ if (.Platform$OS.type == "windows") {
     .libPaths(c("D:/a/mipdtrial/mipdtrial/check/mipdtrial.Rcheck", .libPaths()))
 }
 
-if (!require(pkvancothomson)) {
+if(!requireNamespace("pkvancothomson", quietly = TRUE)) {
   PKPDsim::install_default_literature_model("pk_vanco_thomson")
+  loadNamespace("pkvancothomson")
 }
 ```
 
