--- a/vignettes/busulfan_mipd.Rmd
+++ b/vignettes/busulfan_mipd.Rmd
@@ -204,7 +204,7 @@ simulated concentration to produced a measured therapeutic drug monitoring
 sample.
 
 ```{r echo = FALSE}
-res <- run_trial(data = dat, design = design, cov_mapping = cov_map, seed = 1)
+res <- run_trial(data = dat, design = design, cov_mapping = cov_map, seed = 1, progress = FALSE)
 
 ```
 
