--- a/vignettes/sample_timing.Rmd
+++ b/vignettes/sample_timing.Rmd
@@ -187,7 +187,7 @@ in the model:
 cov_map <- c(
   WT = "weight", 
   CRCL = "crcl",
-  CL_HEMO = "CL_HEMO"
+  CL_HEMO = "cl_hemo"
 )
 
 ```
@@ -203,8 +203,8 @@ variability described in the model, and residual variability will be added to
 each sample collected using the error model described in the model.
 
 ```{r}
-res1 <- run_trial(data = dat, design = design1, cov_mapping = cov_map, seed = 15)
-res2 <- run_trial(data = dat, design = design2, cov_mapping = cov_map, seed = 15)
+res1 <- run_trial(data = dat, design = design1, cov_mapping = cov_map, seed = 15, progress = FALSE)
+res2 <- run_trial(data = dat, design = design2, cov_mapping = cov_map, seed = 15, progress = FALSE)
 ```
 
 We can look at final exposure estimates for each arm:
