--- a/vignettes/busulfan_mipd.Rmd
+++ b/vignettes/busulfan_mipd.Rmd
@@ -209,9 +209,9 @@ res <- run_trial(
   design = design,
   cov_mapping = cov_map, 
   progress = FALSE,
+  threads = 1,
   seed = 1
 )
-
 ```
 
 Here are the first few rows of our simulation results:
